# opencl-ws

./: CMakeLists.txt  README.md  main.cpp
kernels/: naive_matmul.cl  tiled_matmul.cl
